    dentries accessed through multiple paths (such as RO and RW).
  * Apply patch to allow the module to build with the Ubuntu kernel.
    Thanks, Björn Torkelsson.  (Closes: #342607)
  * Stop unconditionally forcing the compiler to cc or gcc in configure,
    allowing, among other things, building the kernel module with a
    compiler other than the default system compiler.  (Closes: #338306)
  * Include afsmonitor and livesys in openafs-client.
  * Include volinfo in openafs-fileserver.
  * Document FAM's lack of support for AFS's security model and recommend
    gamin instead.  (Closes: #343246)
  * Add a hint to README.Debian on what to do about the cache partition if
    running ReiserFS or XFS without a spare partition.
  * Use make install into debian/tmp rather than make dest.  make dest is
    mostly for Transarc compatibility and make install looks more like a
    typical package and makes it easier to evaluate differences in FHS
    location between upstream and Debian.  As a side effect, there's no
    need to mess with the @sys link.  (Closes: #165909)
  * Install more files with dh_install rather than install commands in
    debian/rules so that *.install shows a more complete picture of what
    goes into each package.
  * Don't ignore make distclean errors.

 -- Russ Allbery <rra@debian.org>  Wed, 21 Dec 2005 18:59:01 -0800

openafs (1.4.0-2) unstable; urgency=low

  * Install more of the standard OpenAFS utilities.  (Closes: #138851)
    - openafs-dbserver: Install prdb_check and vldb_check.
    - openafs-fileserver: Install voldump.
    - openafs-client: Install fstrace, scout, and up (as afs-up).
    - Modify fstrace to load its catalog from /usr/share/openafs.
  * Do not install kpwvalid.  The default version does little useful and
    the kpwvalid binary must be in AFS for it to take effect.
  * Overhaul the way kernel modules are built.
    - Recommend linux-image rather than kernel-image for newer kernels.